# rs-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  example-config.json  example-config.openrouter.json
examples/: agent.md
src/: agent_prompt.rs  config.rs  error.rs  event.rs  main.rs  summarizer.rs
src/agent/: builder.rs  mod.rs
src/client/: mod.rs  ollama.rs  openrouter.rs
src/memory/: mod.rs
src/session/: mod.rs  sqlite_store.rs
src/tools/: dir_create.rs  file_list.rs  file_read.rs  file_search.rs  file_write.rs  mod.rs
