[package]
name = "agent-forge"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
regex = "1"
json-patch = "4"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
env_logger = "0.11"
anyhow = "1"
